nullaway_error_4BC6A244-032D-4D76-8FF3-24198E032800.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/context/support/ServletContextResourcePatternResolver.java:165: error: [NullAway] passing @Nullable parameter 'entryPattern' where @NonNull is required
				if (getPathMatcher().match(entryPattern, entryPath)) {
				                           ^
    (see http://t.uber.com/nullaway )
